Fix input alignment on home page, add dividers to content

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -432,6 +432,14 @@ Considered cycling between background colors for content sections.
   max-width: 450px;
 }
 
+/* Oddly critical for alignment on homepage */
+
+.container > div {
+  width:  100%;
+  height: 100%;
+  display: inline-block;
+}
+
 .menu-item-blue {
   color: #fff !important;
   background-color: #57C2F0 !important;
